syntax = "proto3";

import "scalapb/scalapb.proto";
import "ObservableAndTraceable.proto";

option (scalapb.options) = {
  scope: FILE
  flat_package: true
  single_file: true
  lenses: true
};

package io.github.aksharp.codegen.example.funWithNames;

message Person {
    string name = 1;
    int32 age = 2;
    string type = 3;
}

message PersonRequest {
    com.example.api.ObservableAndTraceable observableAndTraceable = 1;
    Person person = 2;
    string suggestedNickname = 3;
}

message PersonReply {
    string nickname = 1;
}

message NicknameRequest {
    com.example.api.ObservableAndTraceable observableAndTraceable = 1;
    string nickname = 2;
}

message NicknameReply {
    string name = 1;
}

service GenerateNickname {
    rpc CreateNickname (PersonRequest) returns (PersonReply) {}
    rpc GuessName (NicknameRequest) returns (NicknameReply) {}
}

service Predictor {
    rpc PredictNickname (PersonRequest) returns (PersonReply) {}
}